--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <script>
         const words = [
             { spanish: "de", english: "of", context: "The book is full of interesting stories.", translation: "El libro está lleno de historias interesantes." },
-            { spanish: "la", english: "the", context: "The sun shines brightly today.", translation: "La casa es muy grande." },
+            { spanish: "la", english: "the", context: "The house is very big.", translation: "La casa es muy grande." },
             { spanish: "que", english: "that", context: "I know that you are very smart.", translation: "Sé que eres muy inteligente." },
             { spanish: "el", english: "the", context: "The dog is playing in the park.", translation: "El perro está jugando en el parque." },
             { spanish: "en", english: "in", context: "She lives in a big house.", translation: "Ella vive en una casa grande." },
