--- a/index.html
+++ b/index.html
@@ -273,6 +273,17 @@
             { spanish: "manera", english: "way", context: "Do it this way.", translation: "Hazlo de esta manera." }
         ];
 
+        // Función para mezclar el arreglo
+    function shuffle(array) {
+        for (let i = array.length - 1; i > 0; i--) {
+            const j = Math.floor(Math.random() * (i + 1));
+            [array[i], array[j]] = [array[j], array[i]];
+        }
+    }
+
+    // Mezclar las palabras antes de mostrar las preguntas
+    shuffle(words);
+        
         let currentIndex = 0;
 
         function loadQuestion() {
